--- a/src/css/All.css
+++ b/src/css/All.css
@@ -9,18 +9,21 @@
 .flex {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+  padding: 0 10px;
 }
 
 .column {
   flex: 25%;
   max-width: 25%;
-  padding: 0 4px;
+  padding: 0 10px;
+  position: relative;
 }
 
 .column img {
-  /* margin: 4px; */
-  padding: 4px 0;
+  border-radius: 20px;
+  margin: 10px 0;
   width: 100%;
   vertical-align: middle;
+  box-shadow: 0 4px 8px 2px rgba(0, 0, 0, 0.2),
+    4px 8px 20px 0 rgba(0, 0, 0, 0.2);
 }
