--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -27,7 +27,8 @@
   /* ------------Nav ------------------- */
   .nav {
     .nav_div {
-      background: rgba(0, 0, 0, 0.2);
+      // background: rgba(0, 0, 0, 0.2);
+      background: #192f6d;
  
       padding: 0px 50px;
       position: absolute;
@@ -119,11 +120,13 @@
         }
 
         .nav_link {
-          background: rgba(135, 206, 235, 0.4);
+          // background: rgba(135, 206, 235, 1);
+          background: white;
+          color: black;
           display: flex;
           margin-right: 4%;
           padding-left: 0px;
-          align-items: left;
+          align-items: center;
           flex-direction: column;
           position: absolute;
           right: 0px;
@@ -133,7 +136,7 @@
   
           top: 8.5vh;
   
-          width: 20%;
+          width: 15%;
   
 
      
