:bug: 새로고침 후 로그인 이탈 버그 수정완료, 로그인 후 모달css 수정 완료

--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -81,6 +81,7 @@
         
         .nav_link {
           background-color: white;
+          color: black;
           display: flex;
           margin-right: 5%;
           padding-left: 0px;
