--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -96,7 +96,7 @@
           background-color: white;
           color: black;
           display: flex;
-          margin-right: 5%;
+          margin-right: 51px;
           padding-left: 0px;
           align-items: center;
           flex-direction: column;
@@ -104,9 +104,9 @@
           right: 0px;
           border-radius: 10px;
   
-          top: 10vh;
+          top: 8.5vh;
   
-          width: 20%;
+          width: 17%;
   
           .list {
             display: flex;
@@ -138,7 +138,8 @@
           background: white;
           color: black;
           display: flex;
-          margin-right: 4%;
+          margin-right: 50px;
+          
           padding-left: 0px;
           align-items: center;
           flex-direction: column;
