--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -37,12 +37,12 @@
       height: 10vh;
       color: white; //  폰트 컬러
       z-index: 1;
-      // opacity: 0;
       display: flex; // 위치를 변형하고 싶은요소의 부모요소에 display: flex를 적용하기.
       // background-color: none;
       
-      // justify-content: space-between;
+      // justify-content: space-be;
       align-items: center;
+      // opacity: 0;
   
       // 햄버거 클릭 안했을시. -> 네브바 안의 아이템들 정렬 유지를 위함.
       .menuList_Temp_Login {
@@ -72,7 +72,10 @@
   
       // 로고를 클릭 시 메인페이지?로 리다이렉트
       #nav_logo {
-        max-width: 13%;
+        
+        // width: inherit;
+        max-width: 15%;
+        height: auto;
         // z-index: 2;
       }
   
@@ -171,7 +174,7 @@
       /* ----- 햄버거 토글 ----- */
       .hamburgerToggle_ON {
   
-        padding-left: 30vw;
+        // padding-left: 30vw;
         div {
           // position: fixed;
           
@@ -195,7 +198,13 @@
       }
   
       .hamburgerToggle_OFF {
-        padding-left: 30vw;
+        position: absolute;
+        right: 0px;
+        // width: 300px;
+        border: 3px solid #73AD21;
+        padding: 10px;
+      
+        
         div {
           // z-index: 1;
           width: 23px;
