:art: 마이페이지 GET요청 mypage.js로 이동, 수정된정보 실시간 렌더 완료

--- a/src/css/Mypage.scss
+++ b/src/css/Mypage.scss
@@ -20,13 +20,19 @@
     background: white;
     color: black;
     position: relative;
-    width: 30%;
+    width: 60%;
     text-align: center;
     border-radius: 10px;
   }
 
   .userInfo_input_container_inMypage {
     background: skyblue;
+    .div{
+      display: flex;
+    }
+    
+    
+    align-items: center;
     margin-right: 7%;
     margin-left: 7%;
     margin-bottom: 7%;
