--- a/src/css/Comments.css
+++ b/src/css/Comments.css
@@ -5,7 +5,7 @@
 .myModal {
   display: none;
   position: fixed;
-  /* z-index: 1; */
+  z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
@@ -22,7 +22,7 @@
   margin-right: auto;
   padding: 20px;
   border: 2px solid rgb(160, 160, 160);
-  width: 70%;
+  width: 55%;
   height: 70%;
   top: 10%;
   vertical-align: middle;
@@ -47,7 +47,7 @@
   cursor: pointer;
 }
 
-.name {
+.photoName {
   position: absolute;
   top: 7%;
   left: 5%;
@@ -60,7 +60,8 @@
   position: absolute;
   top: 15%;
   left: 5%;
-  width: 40%;
+  /* width: 40%; */
+  height: 50%;
 }
 
 .hashTag {
@@ -98,7 +99,7 @@
 .btns {
   position: absolute;
   bottom: 13.5%;
-  left: 33%;
+  left: 29%;
 }
 
 .modifyBtn {
@@ -125,7 +126,8 @@
   position: absolute;
   top: 10%;
   right: 5%;
-  width: 40%;
+  /* width: 40%; */
+  height: 32%;
 }
 
 .HowToGo {
@@ -144,7 +146,7 @@
 .favorite {
   position: absolute;
   bottom: 45%;
-  right: 40%;
+  right: 34%;
   width: 40px;
   height: 30px;
   font-size: 15px;
@@ -158,7 +160,7 @@
   position: absolute;
   bottom: 15%;
   right: 5%;
-  width: 40%;
+  width: 34%;
   height: 25%;
 }
 
@@ -222,6 +224,11 @@
   position: relative;
   /* top: 60%; */
   left: 3%;
+}
+
+.commentRemove {
+  position: relative;
+  right: 0;
 }
 
 .commentHr {
