--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -43,88 +43,99 @@
       float: left;
       width: 50%;
       margin-left: 3%;
-      
-    }
-
-    #user_title {
-      display: flex;
-      justify-content: flex-start;
-      align-content: center;
-      padding-left: 0.3rem;
-      padding-bottom: 7px;
-    }
-    input[type="email"],
-    input[type="password"]{
-      display: flex;
-      width: 80%;
-      font-size: 0.9rem;
-      border-radius: 5px;
-      border-width: 1.6px;
-      border-color: rgb(143, 143, 143);
-      padding: 0.48rem 0.3rem;
-      margin: 0.4rem;
-
-    }
-    input[type="email"]::placeholder,
-    input[type="password"]::placeholder {
-      padding-left: 6px;
-      font-size: 0.9rem;
-      color: rgb(166, 163, 168);
-      display: flex;
-      align-content: center;
-    }
+      margin-bottom: 3%;
     
-    
-    .findAccount_span {
-      display: flex;
-      margin-left: 37%;
-      
-      span {
-        font-size: 0.8rem;
+
+      #user_title {
+        display: flex;
+        justify-content: flex-start;
+        align-content: center;
+        padding-left: 0.3rem;
+        padding-bottom: 7px;
       }
-    }
-    
-    
-    .Email_PW_container {
-      // background: skyblue; // 사이즈 테스트 중
+      input[type="email"],
+      input[type="password"]{
+        display: flex;
+        width: 97%;
+        font-size: 0.9rem;
+        border-radius: 5px;
+        border-width: 1.6px;
+        border-color: rgb(143, 143, 143);
+        padding: 0.48rem 0.9rem;
+        margin: 0.4rem;
+      }
+      input[type="email"]::placeholder,
+      input[type="password"]::placeholder {
+        font-size: 0.9rem;
+        color: rgb(166, 163, 168);
+        display: flex;
+        align-content: center;
+      }
       
-      margin-right: 7%;
-      margin-left: 7%;;
-      margin-bottom: 3px;
-    }
-    
+      .Email_PW_container {
+        // background: skyblue; // 사이즈 테스트 중
+        
+        margin-right: 7%;
+        margin-left: 7%;;
+        margin-bottom: 3px;
+      }
+      
+      .find_container {
+        margin-right: 7%;
+        margin-left: 7%;
+        padding-left: 0.3rem;
+        
+        .findAccount_span {
+          display: flex;
+          justify-content: flex-end;
+          
+          span {
+            font-size: 0.7rem;
+          }
+        }
+      }
+
+      .button_container_signin {
+        margin-top: 5%;
+        margin-right: 7%;
+        margin-left: 7%;
+        padding-left: 0.3rem;
+
+        .Button_in_signIn {
+          margin-top: 0.5rem;
+        }
+      }
+  }
+
+
     .container2_siginIn {
       float: left;
       flex: 33.3%;
       max-width: 33.3%;
-    }
-    
-    .Button_in_signIn {
-      margin-top: 1rem;
-    }
-    
-    .socialLogin{
-      margin: 10% 10%;
-      // position: relative;
-      // display: flex;
-      justify-content: center;
-      align-items: center;
-      // flex-direction: row;
-      .socialLogin_btn{
-        // max-width: 50%;
-        // // min-width: 10px;
-        
-        width: 15%;
-        margin-left: 10%;
-        margin-right: 10%;
-        // // justify-content: center;
-        // // align-items: center;
-        
-        
-        
+      .socialLogin{
+        margin: 10% 10%;
+        // position: relative;
+        // display: flex;
+        justify-content: center;
+        align-items: center;
+        // flex-direction: row;
+        .socialLogin_btn{
+          // max-width: 50%;
+          // // min-width: 10px;
+          
+          width: 15%;
+          margin-left: 10%;
+          margin-right: 10%;
+          // // justify-content: center;
+          // // align-items: center;
+          
+          
+          
+          
+        }
         
       }
-      
     }
+    
   }
 }
