:sparkles: <Comments />에 포토타이틀 수정 기능 넣기
<Comments />에 포토타이틀 수정 기능 넣기

--- a/src/css/Comments.scss
+++ b/src/css/Comments.scss
@@ -57,6 +57,19 @@
   font-weight: bold;
 }
 
+.modifyPhotoName {
+  width: 70%;
+}
+
+.modifyPhotoNameBtn {
+  width: 10%;
+  font-size: 15px;
+  font-weight: bold;
+  color: white;
+  background-color: rgb(97, 69, 163);
+  border-radius: 10px;
+}
+
 .selectPhoto {
   position: relative;
   display: block;
