--- a/src/css/Button.scss
+++ b/src/css/Button.scss
@@ -16,7 +16,10 @@ $black: rgba(24, 10, 10, 0.932);
   }
 
   &.outline {
-    color: $color;
+    color: lighten($color, 20%);
+    &:hover {
+      color: $color;
+    }
     background: none;
     border: 1px solid lighten($color, 40%);
     &:hover {
