--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -49,7 +49,7 @@
       margin-bottom: 3%;
     
 
-      #user_title {
+      .user_title {
         font-family: 'Amatic SC', cursive;
         font-size: 1.5rem;
         display: flex;
@@ -61,7 +61,7 @@
       input[type="email"],
       input[type="password"]{
         display: flex;
-        width: 90%;
+        width: 100%;
         font-size: 0.9rem;
         border-radius: 5px;
         border-width: 1.6px;
@@ -132,9 +132,6 @@
         margin-left: 7%;
         padding-left: 0.3rem;
       
-        .Button_in_signIn {
-          margin-top: 0.5rem;
-        }
         .signIn_icon {
           padding-left: 0.1rem;
           color: rgb(202, 200, 200);
